Add webp images and optimize them

--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
                     <!-- Le logo sera h-10 par défaut (mobile ET tablette), et h-20 sur les écrans larges (lg) et plus. -->
 
                     <!-- Logo par défaut (noir) -->
-                    <img src="assets/images/logo-sans-lettrage.png"
+                    <img loading="lazy" src="assets/images/logo-sans-lettrage.png"
                          alt="logo"
-                         class="h-10 lg:h-20 block scrolled:hidden" />
+                         class="h-10 lg:h-20 block scrolled:hidden"
+                    />
 
                     <!-- Logo light (blanc) -->
-                    <img src="assets/images/logo-light-sans-lettrage.png"
+                    <img loading="lazy" src="assets/images/logo-light-sans-lettrage.png"
                          alt="logo"
-                         class="h-10 lg:h-20 hidden scrolled:block" />
+                         class="h-10 lg:h-20 hidden scrolled:block"
+                    />
                 </a>
                 <div class="flex items-center">
                     <div onclick="toggleMenu()" class="overlay fixed inset-0 z-[51] hidden bg-black/60 lg:hidden"></div>
@@ -249,8 +251,8 @@
     -->
     <div class="-mt-[82px] flex-grow overflow-hidden lg:-mt-[106px]">
         <section id="home" class="relative pt-[82px] lg:pt-[106px] text-white">
-            <img
-                src="assets/images/consulting/banner-bg.webp"
+            <img loading="lazy"
+                src="assets/images/consulting01/banner-bg.webp"
                 alt="Bannière"
                 width="1920"
                 height="828"
@@ -274,14 +276,14 @@
                         <div class="flex items-center justify-center gap-5 md:justify-start">
                             <div
                                 class="flex h-[60px] w-[60px] items-center justify-center rounded-full bg-primary/50 duration-200 hover:bg-black">
-                                <img src="assets/images/consulting/banner-icon1.svg" alt="" />
+                                <img loading="lazy" src="assets/images/consulting/banner-icon1.svg" alt="" width="30" height="30"/>
                             </div>
                             <div
                                 class="flex h-[60px] w-[60px] items-center justify-center rounded-full bg-primary/50 duration-200 hover:bg-black">
-                                <img src="assets/images/consulting/banner-icon2.svg" alt="" />
+                                <img loading="lazy" src="assets/images/consulting/banner-icon2.svg" alt="" width="30" height="33"/>
                             </div>
                             <a class="flex h-[60px] w-[60px] items-center justify-center rounded-full bg-primary/50 duration-200 hover:bg-black">
-                                <img src="assets/images/consulting/banner-icon3.svg" alt="" />
+                                <img loading="lazy" src="assets/images/consulting/banner-icon3.svg" alt="" width="25" height="35"/>
                             </a>
                         </div>
                         <a href="#contact" class="btn rounded-md bg-white">Contactez-nous</a>
@@ -321,33 +323,33 @@
             <div class="swiper industry-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/suppressionvirus.svg" alt=""
-                                                   class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/suppressionvirus.svg" alt=""
+                                                   class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
 
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/changement-disque-dur.svg"
-                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/changement-disque-dur.svg"
+                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/entretien-preventif.svg" alt=""
-                                                   class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/entretien-preventif.svg" alt=""
+                                                   class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/formation-numerique.svg" alt=""
-                                                   class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/formation-numerique.svg" alt=""
+                                                   class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/recuperation-de-donnees.svg"
-                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/recuperation-de-donnees.svg"
+                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/installation-systeme.svg"
-                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/installation-systeme.svg"
+                                                   alt="" class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:"><img src="assets/images/repapc/picto-slide/ordinateur-portable.svg" alt=""
-                                                   class="mx-auto transition hover:scale-110 w-64 h-64" /></a>
+                        <a href="javascript:"><img loading="lazy" src="assets/images/repapc/picto-slide/ordinateur-portable.svg" alt=""
+                                                   class="mx-auto transition hover:scale-110 w-64 h-64" width="160" height="40" /></a>
                     </div>
                 </div>
             </div>
@@ -368,7 +370,7 @@
                             <div
                                 class="rounded-[10px] bg-white py-4 px-6 text-center shadow-[0_0_20px_rgba(0,0,0,0.1)] dark:bg-white/10 sm:py-[19px]">
                                 <span>
-                                    <img src="assets/images/consulting/about-icon1.svg" class="mx-auto" alt="" />
+                                    <img loading="lazy" src="assets/images/consulting/about-icon1.svg" class="mx-auto" alt="" width="60" height="60"/>
                                 </span>
                                 <p class="text-b mt-2 font-semibold text-black dark:text-white sm:text-xl">
                                     Expertise</p>
@@ -376,14 +378,14 @@
                             <div
                                 class="rounded-[10px] bg-white py-4 px-6 text-center shadow-[0_0_20px_rgba(0,0,0,0.1)] dark:bg-white/10 sm:py-[19px]">
                                 <span>
-                                    <img src="assets/images/consulting/about-icon2.svg" class="mx-auto" alt="" />
+                                    <img loading="lazy" src="assets/images/consulting/about-icon2.svg" class="mx-auto" alt="" width="61" height="60"/>
                                 </span>
                                 <p class="mt-2 font-semibold text-black dark:text-white sm:text-xl">Rapidité</p>
                             </div>
                             <div
                                 class="rounded-[10px] bg-white py-4 px-6 text-center shadow-[0_0_20px_rgba(0,0,0,0.1)] dark:bg-white/10 sm:py-[19px]">
                                 <span>
-                                    <img src="assets/images/consulting/about-icon3.svg" class="mx-auto" alt="" />
+                                    <img loading="lazy" src="assets/images/consulting/about-icon3.svg" class="mx-auto" alt="" width="60" height="60"/>
                                 </span>
                                 <p class="mt-2 font-semibold text-black dark:text-white sm:text-xl">
                                     Confiance</p>
@@ -398,8 +400,8 @@
                                 class="absolute -inset-4 bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl blur-xl opacity-70"></div>
                             <div
                                 class="relative bg-white dark:bg-gray-800 rounded-xl p-3 shadow-2xl transform hover:scale-105 transition-transform duration-300">
-                                <img src="assets/images/repapc/reparation-pc.png" class="mx-auto rounded-xl"
-                                     alt="réparation pc Aix en Provence" />
+                                <img loading="lazy" src="assets/images/repapc/reparation-pc.webp" class="mx-auto rounded-xl"
+                                     alt="réparation pc Aix en Provence" width="503" height="573" />
                             </div>
                         </div>
                         <div class="space-y-4 text-center ltr:md:text-left rtl:md:text-right">
@@ -433,7 +435,7 @@
         -->
         <section id="services" class="relative bg-black py-12 dark:bg-white/5 lg:py-24">
             <div class="absolute bottom-0 ltr:right-0 rtl:left-0">
-                <img src="assets/images/consulting/bg-icon.svg" class="rtl:rotate-y-180" alt="" />
+                <img loading="lazy" src="assets/images/consulting/bg-icon.svg" class="rtl:rotate-y-180" alt="" width="1129" height="376"/>
             </div>
             <div class="container relative z-[1]">
                 <div class="heading text-center text-white">
@@ -447,10 +449,12 @@
                     <!-- Optimisation et Maintenance Logicielle -->
                     <div class="group">
                         <div class="overflow-hidden">
-                            <img
-                                src="assets/images/consulting/repa-pc-maintenance-logicielle.jpg"
+                            <img loading="lazy"
+                                src="assets/images/consulting01/repa-pc-maintenance-logicielle.webp"
                                 class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
                                 alt="Optimisation et Maintenance Logicielle"
+                                width="1380"
+                                height="920"
                             />
                         </div>
                         <div
@@ -464,7 +468,7 @@
                                 maintenance logicielle.
                             </p>
                             <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                            <img src="assets/images/consulting/services-icon1.svg" alt="Optimisation Icon" />
+                            <img loading="lazy" src="assets/images/consulting/services-icon1.svg" alt="Optimisation Icon" width="99" height="77"/>
                         </span>
                         </div>
                     </div>
@@ -472,10 +476,12 @@
                     <!-- Interventions Matérielles Légères -->
                     <div class="group">
                         <div class="overflow-hidden">
-                            <img
-                                src="assets/images/consulting/repa-pc-interventions-materielles.jpg"
+                            <img loading="lazy"
+                                src="assets/images/consulting01/repa-pc-interventions-materielles.webp"
                                 class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
                                 alt="Interventions Matérielles Légères"
+                                width="1380"
+                                height="920"
                             />
                         </div>
                         <div
@@ -489,7 +495,7 @@
                                 équipement coûteux.
                             </p>
                             <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                            <img src="assets/images/consulting/services-icon2.svg" alt="Interventions Icon" />
+                            <img loading="lazy" src="assets/images/consulting/services-icon2.svg" alt="Interventions Icon" width="102" height="57" />
                         </span>
                         </div>
                     </div>
@@ -497,10 +503,11 @@
                     <!-- Services Informatiques Avancés -->
                     <div class="group">
                         <div class="overflow-hidden">
-                            <img
-                                src="assets/images/consulting/services3.jpg"
+                            <img loading="lazy"
+                                src="assets/images/consulting01/services3.webp"
                                 class="w-full duration-200 group-hover:rotate-2 group-hover:scale-110"
                                 alt="Services Informatiques Avancés"
+                                width="1380" height="920"
                             />
                         </div>
                         <div
@@ -514,7 +521,7 @@
                                 complexes.
                             </p>
                             <span class="absolute bottom-0 opacity-20 ltr:right-0 rtl:left-0">
-                            <img src="assets/images/consulting/services-icon3.svg" alt="Services Avancés Icon" />
+                            <img loading="lazy" src="assets/images/consulting/services-icon3.svg" alt="Services Avancés Icon" width="73" height="81" />
                         </span>
                         </div>
                     </div>
@@ -639,7 +646,7 @@
                 </div>
                 <div class="flex flex-col items-center gap-5 sm:gap-10 lg:flex-row">
                     <div class="w-full max-w-[552px] flex-none">
-                        <img src="assets/images/consulting/question-img.png" class="rtl:rotate-y-180" alt="" />
+                        <img loading="lazy" src="assets/images/consulting01/question-img.webp" class="rtl:rotate-y-180" alt="" width="552" height="485"/>
                     </div>
                     <div class="accordion-container flex-1">
                         <div class="ac mt-5 border-none bg-transparent">
@@ -780,7 +787,15 @@
         </section>
 
 
-        <section id="engagement" class="bg-black bg-[url(../images/consulting/business-img.png)] bg-cover bg-center bg-no-repeat py-12 lg:py-24">
+        <section id="engagement" class="relative bg-black py-12 lg:py-24">
+            <!-- Image en arrière-plan -->
+            <img loading="lazy"
+                src="assets/images/consulting01/business-img.webp"
+                alt="Image de fond représentant une discussion d'affaires"
+                width="1920"
+                height="456"
+                class="absolute inset-0 z-0 h-full w-full object-cover object-center"
+            />
             <div class="container">
                 <div
                     class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">
@@ -916,19 +931,23 @@
                                 class="text-secondary font-semibold">Diagnostic gratuit • Intervention rapide</span>
                         </p>
 
-                        <img
+                        <img loading="lazy"
                             src="assets/images/form-light-img.svg"
                             alt="form-img"
                             class="mx-auto block dark:hidden"
                             data-aos="fade-right"
                             data-aos-duration="1000"
+                            width="314"
+                            height="278"
                         />
-                        <img
+                        <img loading="lazy"
                             src="assets/images/form-dark-img.svg"
                             alt="form-img"
                             class="mx-auto hidden dark:block"
                             data-aos="fade-right"
                             data-aos-duration="1000"
+                            width="314"
+                            height="278"
                         />
                     </div>
 
@@ -1041,7 +1060,7 @@
 
                 <!-- Logo + Contact rapide (remplace les réseaux sociaux) -->
                 <div class="relative">
-                    <img src="assets/images/logo-sans-lettrage.png" alt="Réparation PC" class="" />
+                    <img loading="lazy" src="assets/images/logo-sans-lettrage.png" alt="Réparation PC" class="" width="130" height="130"/>
 
                     <!-- Remplace les réseaux par info contact -->
                     <div class="mt-8 space-y-3">
@@ -1060,10 +1079,10 @@
                         <p class="text-xs text-gray-500">Réponse sous 2h garantie</p>
                     </div>
 
-                    <img src="assets/images/footer-shape.png" alt="footer-shape"
-                         class="absolute bottom-0 right-0 sm:left-0" />
-                    <img src="assets/images/footer-shape-dark.png" alt="footer-shape-dark"
-                         class="absolute bottom-0 right-0 hidden dark:block sm:left-0" />
+                    <img loading="lazy" src="assets/images/consulting01/footer-shape.webp" alt="footer-shape"
+                         class="absolute bottom-0 right-0 sm:left-0" width="150" height="111" />
+                    <img loading="lazy" src="assets/images/consulting01/footer-shape-dark.webp" alt="footer-shape-dark"
+                         class="absolute bottom-0 right-0 hidden dark:block sm:left-0" width="150" height="112" />
                 </div>
 
                 <!-- Services de réparation -->
